plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

archivesBaseName = 'yarn-cli'
version = '0.1.0'
group = 'io.github.bymartrixx'

repositories {
    mavenCentral()
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net'
    }
}

dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13'

    // This dependency is used by the application.
    implementation 'net.fabricmc:tiny-mappings-parser:+'
    implementation 'org.jline:jline:3.19.0'
    implementation 'org.fusesource.jansi:jansi:2.2.0' // Used by jline on windows
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha1' // Used by Apache HttpClient

    compile 'org.jetbrains:annotations:20.1.0'
}

application {
    // Define the main class for the application.
    mainClassName = 'io.github.bymartrixx.yarncli.YarnCli'
}
